--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
     
     <footer>
-        <p>&copy; hatum</p>
+        <p><a id="gitlink" href="https://github.com/hatumgit/236meteo"><img id="gitimg" src="imagens/giticon.png" alt="git">hatum</a></p>
     </footer>
 
     <script src="script.js"></script>
